k8s/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-service
  namespace: default
  labels:
    app: ui-service
spec:
  selector:
    app: ui-service
  ports:
  -   port: 8080
      name: http
      appProtocol: http
      targetPort: 8080
