k8s/ingress-gateway-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: app-ingress-gw
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: app-secret
      hosts:
        - test.com
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-gateway-rules
spec:
  hosts:
    - "test.com"
  gateways:
    - app-ingress-gw
  http:
    - match:
        - uri:
            prefix: "/vault"
      route:
        - destination:
            host: vault-service
    - match:
        - uri:
            prefix: "/user-service"
      route:
        - destination:
            host: user-service
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: app-service
