k8s/istio-external-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: fabric
spec:
  hosts:
    - host.minikube.internal
  ports:
    - number: 8447
      name: http
      protocol: TLS
  resolution: DNS
  location: MESH_EXTERNAL
